--- a/fazer-doacao.html
+++ b/fazer-doacao.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header6-2h" style="background-image: url(assets/images/room-laptop.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header6-2h" style="background-image: url(assets/images/room-laptop.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(204, 204, 204);">
     </div>
@@ -71,7 +71,7 @@
                     <div class="mbr-table-md-up">
                         
                         <div class="mbr-table-cell mbr-right-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                            <div class="mbr-figure"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/Tq7p44IA-1U?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+                            <div class="mbr-figure"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/wB87js-fRuk?rel=0&amp;amp;showinfo=0&amp;autoplay=1&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
                         </div>
                         <div class="mbr-table-cell col-md-5 text-xs-center text-md-left content-size">
 
@@ -81,7 +81,7 @@
                                 <p>Neste passo você deve ter em mãos os dados da pessoa que ira receber a sua doação, para isso entre em contato com um administrador no Grupo Whatsapp Suporte:<br></p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-lg btn-success-outline btn-success" href="https://chat.whatsapp.com/invite/31zG1b9QBvN4TL4dKVrBxr" target="_blank"><span class="socicon socicon-whatsapp mbr-iconfont mbr-iconfont-btn"></span>&nbsp;SUPORTE</a> <a class="btn btn-lg btn-danger-outline btn-danger" href="https://doa-vs-ganha-ajuda-entre-amigos.github.io/ajuda-mutua/compartilhar" target="_blank">CONTINUAR</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-lg btn-success-outline btn-success" href="https://chat.whatsapp.com/invite/31zG1b9QBvN4TL4dKVrBxr" target="_blank"><span class="socicon socicon-whatsapp mbr-iconfont mbr-iconfont-btn"></span>&nbsp;SUPORTE</a> <a class="btn btn-lg btn-danger-outline btn-danger" href="https://doa-vs-ganha-ajuda-entre-amigos.github.io/ajuda-mutua/nome-na-lista" target="_blank">CONTINUAR</a></div>
 
                         </div>
 
