--- a/nome-na-lista.html
+++ b/nome-na-lista.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header6-2f" style="background-image: url(assets/images/room-laptop.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header6-2f" style="background-image: url(assets/images/room-laptop.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(204, 204, 204);">
     </div>
@@ -74,10 +74,10 @@
                         </div>
                         <div class="mbr-table-cell col-md-5 text-xs-center text-md-left content-size">
 
-                            <h3 class="mbr-section-title display-2">5° Passo<br>Seu nome na Lista</h3>
+                            <h3 class="mbr-section-title display-2">4° Passo &nbsp;Final<br>Seu nome na Lista</h3>
 
                             <div class="mbr-section-text">
-                                <p>Aqui é a parte mais gostosa de participar...<br>Acompanhe seu nome na lista subindo a cada nova doação feita para um membro... Finaliza aqui a triagem.<br><br>FIQUE TRANQUILO...<br><br>VOCÊ SERÁ INFORMADO POR EMAIL SOBRE ATUALIZAÇÃO.<br></p>
+                                <p>Aqui é a parte mais gostosa de participar...<br>Acompanhe seu nome na lista subindo a cada nova doação feita para um membro... Finaliza aqui a triagem.<br><br>FIQUE TRANQUILO...<br>VOCÊ SERÁ INFORMADO POR EMAIL SOBRE ATUALIZAÇÃO.<br>DO SEU NOME NA LISTA...</p>
                             </div>
 
                             <div class="mbr-section-btn"><a class="btn btn-lg btn-danger-outline btn-danger" href="https://doa-vs-ganha-ajuda-entre-amigos.github.io/ajuda-mutua/seja-bem-vindo" target="_blank">VOLTAR INICIO ETAPAS</a></div>
