--- a/fase-1.html
+++ b/fase-1.html
@@ -57,12 +57,12 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2r" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2r" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
                 <h3 class="mbr-section-title display-2">Lista 1</h3>
-                <small class="mbr-section-subtitle">Atualizada</small>
+                <small class="mbr-section-subtitle">ÚLTIMA ATUALIZAÇÃO	06/04/2017 14:42</small>
             </div>
         </div>
     </div>
@@ -73,7 +73,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <h3 class="mbr-section-title display-2">PRÓXIMO A RECEBER</h3>
-                <small class="mbr-section-subtitle">ÚLTIMA ATUALIZAÇÃO	06/04/2017 14:42<br>	<br>1	SIST1728 - 094981301728<br></small>
+                <small class="mbr-section-subtitle"><br>1	SIST1728 - 094981301728<br></small>
             </div>
         </div>
     </div>
@@ -83,8 +83,8 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="mbr-section-title display-2">PRÓXIMOS A DOAR<div><br></div></h3>
-                <small class="mbr-section-subtitle">ÚLTIMA ATUALIZAÇÃO	06/04/2017 14:42<br>	<br>1	ROBS-2320<br>2	HUMB-4555<br>3	JACK-0366<br>4	MARC-1444<br>5	EDIN-2109<br></small>
+                <h3 class="mbr-section-title display-2">PRÓXIMOS A DOAR</h3>
+                <small class="mbr-section-subtitle"><br>1	ROBS-2320<br>2	HUMB-4555<br>3	JACK-0366<br>4	MARC-1444<br>5	EDIN-2109<br></small>
             </div>
         </div>
     </div>
@@ -95,7 +95,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <h3 class="mbr-section-title display-2">LISTA DE ESPERA</h3>
-                <small class="mbr-section-subtitle">ÚLTIMA ATUALIZAÇÃO	06/04/2017 14:42<br>	<br>1	PAUL-0058<br>2	FLAV-0122<br>3	MICH-0455<br>4	ESTE-0011<br>5	EDUA-2109<br>6	ROBS-2321<br>7	FERN-114<br>8	CARL-4596<br>9	ANTO-4599<br>10	BRUN-1993<br>11	CESA-4000<br>12	MATE-4588<br>13	RAFA-3397<br>14	CLEB-4777<br>15	JONA-3644<br>16	PAUL-0059<br>17	FLAV-0123<br>18	MICH-0456<br>19	ESTE-0012<br>20	EDUA-2110<br>21	ROBS-2322<br>22	FERN-115<br>23	CARL-4597<br>24	ANTO-4600<br>25	BRUN-1994<br>26	CESA-4001<br>27	MATE-4589<br>28	RAFA-3398<br>29	CLEB-4778<br>30	JONA-3645<br>31	PAUL-0060<br>32	FLAV-0124<br>33	MICH-0457<br>34	ESTE-0013<br>35	EDUA-2111<br>36	ROBS-2323<br>37	FERN-116<br>38	CARL-4598<br>39	ANTO-4601<br>40	BRUN-1995<br>41	CESA-4002<br>42	MATE-4590<br>43	RAFA-3399<br>44	CLEB-4779<br>45	JONA-3646<br>46	PAUL-0061<br>47	FLAV-0125<br>48	MICH-0458<br>49	ESTE-0014<br>50	EDUA-2112<br>51	ROBS-2324<br>52	FERN-117<br>53	CARL-4599<br>54	ANTO-4602<br>55	BRUN-1996<br>56	CESA-4003<br>57	MATE-4591<br>58	RAFA-3400<br>59	CLEB-4780<br>60	JONA-3647<br>61	PAUL-0062<br>62	FLAV-0126<br>63	MICH-0459<br>64	ESTE-0015<br>65	EDUA-2113<br>66	ROBS-2325<br>67	FERN-118<br>68	CARL-4600<br>69	ANTO-4603<br>70	BRUN-1997<br>71	CESA-4004<br>72	MATE-4592<br>73	RAFA-3401<br>74	CLEB-4781<br>75	JONA-3648<br>76	PAUL-0063<br>77	FLAV-0127<br>78	MICH-0460<br>79	ESTE-0016<br>80	EDUA-2114<br>81	ROBS-2326<br>82	FERN-119<br>83	CARL-4601<br>84	ANTO-4604<br>85	BRUN-1998<br>86	CESA-4005<br>87	MATE-4593<br>88	RAFA-3402<br>89	CLEB-4782<br>90	JONA-3649<br>91	PAUL-0064<br>92	FLAV-0128<br>93	MICH-0461<br>94	ESTE-0017<br>95	EDUA-2115<br>96	ROBS-2327<br>97	FERN-120<br>98	CARL-4602<br>99	ANTO-4605<br>100	BRUN-1999<br>101	CESA-4006<br>102	MATE-4594<br>103	RAFA-3403<br>104	CLEB-4783<br>105	JONA-3650<br>106	PAUL-0065<br>107	FLAV-0129<br>108	MICH-0462<br>109	ESTE-0018<br>110	EDUA-2116<br>111	ROBS-2328<br>112	FERN-121<br>113	CARL-4603<br>114	ANTO-4606<br>115	BRUN-2000<br>116	CESA-4007<br>117	MATE-4595<br>118	RAFA-3404<br>119	CLEB-4784<br>120	JONA-3651<br>121	PAUL-0066<br>122	FLAV-0130<br>123	MICH-0463<br>124	ESTE-0019<br>125	EDUA-2117<br>126	ROBS-2329<br>127	FERN-122<br>128	CARL-4604<br>129	ANTO-4607<br>130	BRUN-2001<br>131	CESA-4008<br>132	MATE-4596<br>133	RAFA-3405<br>134	CLEB-4785<br>135	JONA-3652<br>136	PAUL-0067<br>137	FLAV-0131<br>138	MICH-0464<br>139	ESTE-0020<br>140	EDUA-2118<br>141	ROBS-2330<br>142	FERN-123<br>143	CARL-4605<br>144	ANTO-4608<br>145	BRUN-2002<br>146	CESA-4009<br>147	MATE-4597<br>148	RAFA-3406<br>149	CLEB-4786<br>150	JONA-3653</small>
+                <small class="mbr-section-subtitle"><br>1	PAUL-0058<br>2	FLAV-0122<br>3	MICH-0455<br>4	ESTE-0011<br>5	EDUA-2109<br>6	ROBS-2321<br>7	FERN-114<br>8	CARL-4596<br>9	ANTO-4599<br>10	BRUN-1993<br>11	CESA-4000<br>12	MATE-4588<br>13	RAFA-3397<br>14	CLEB-4777<br>15	JONA-3644<br>16	PAUL-0059<br>17	FLAV-0123<br>18	MICH-0456<br>19	ESTE-0012<br>20	EDUA-2110<br>21	ROBS-2322<br>22	FERN-115<br>23	CARL-4597<br>24	ANTO-4600<br>25	BRUN-1994<br>26	CESA-4001<br>27	MATE-4589<br>28	RAFA-3398<br>29	CLEB-4778<br>30	JONA-3645<br>31	PAUL-0060<br>32	FLAV-0124<br>33	MICH-0457<br>34	ESTE-0013<br>35	EDUA-2111<br>36	ROBS-2323<br>37	FERN-116<br>38	CARL-4598<br>39	ANTO-4601<br>40	BRUN-1995<br>41	CESA-4002<br>42	MATE-4590<br>43	RAFA-3399<br>44	CLEB-4779<br>45	JONA-3646<br>46	PAUL-0061<br>47	FLAV-0125<br>48	MICH-0458<br>49	ESTE-0014<br>50	EDUA-2112<br>51	ROBS-2324<br>52	FERN-117<br>53	CARL-4599<br>54	ANTO-4602<br>55	BRUN-1996<br>56	CESA-4003<br>57	MATE-4591<br>58	RAFA-3400<br>59	CLEB-4780<br>60	JONA-3647<br>61	PAUL-0062<br>62	FLAV-0126<br>63	MICH-0459<br>64	ESTE-0015<br>65	EDUA-2113<br>66	ROBS-2325<br>67	FERN-118<br>68	CARL-4600<br>69	ANTO-4603<br>70	BRUN-1997<br>71	CESA-4004<br>72	MATE-4592<br>73	RAFA-3401<br>74	CLEB-4781<br>75	JONA-3648<br>76	PAUL-0063<br>77	FLAV-0127<br>78	MICH-0460<br>79	ESTE-0016<br>80	EDUA-2114<br>81	ROBS-2326<br>82	FERN-119<br>83	CARL-4601<br>84	ANTO-4604<br>85	BRUN-1998<br>86	CESA-4005<br>87	MATE-4593<br>88	RAFA-3402<br>89	CLEB-4782<br>90	JONA-3649<br>91	PAUL-0064<br>92	FLAV-0128<br>93	MICH-0461<br>94	ESTE-0017<br>95	EDUA-2115<br>96	ROBS-2327<br>97	FERN-120<br>98	CARL-4602<br>99	ANTO-4605<br>100	BRUN-1999<br>101	CESA-4006<br>102	MATE-4594<br>103	RAFA-3403<br>104	CLEB-4783<br>105	JONA-3650<br>106	PAUL-0065<br>107	FLAV-0129<br>108	MICH-0462<br>109	ESTE-0018<br>110	EDUA-2116<br>111	ROBS-2328<br>112	FERN-121<br>113	CARL-4603<br>114	ANTO-4606<br>115	BRUN-2000<br>116	CESA-4007<br>117	MATE-4595<br>118	RAFA-3404<br>119	CLEB-4784<br>120	JONA-3651<br>121	PAUL-0066<br>122	FLAV-0130<br>123	MICH-0463<br>124	ESTE-0019<br>125	EDUA-2117<br>126	ROBS-2329<br>127	FERN-122<br>128	CARL-4604<br>129	ANTO-4607<br>130	BRUN-2001<br>131	CESA-4008<br>132	MATE-4596<br>133	RAFA-3405<br>134	CLEB-4785<br>135	JONA-3652<br>136	PAUL-0067<br>137	FLAV-0131<br>138	MICH-0464<br>139	ESTE-0020<br>140	EDUA-2118<br>141	ROBS-2330<br>142	FERN-123<br>143	CARL-4605<br>144	ANTO-4608<br>145	BRUN-2002<br>146	CESA-4009<br>147	MATE-4597<br>148	RAFA-3406<br>149	CLEB-4786<br>150	JONA-3653</small>
             </div>
         </div>
     </div>
