--- a/baixar-aplicativo.html
+++ b/baixar-aplicativo.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header6-2k" style="background-image: url(assets/images/room-laptop.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header6-2k" style="background-image: url(assets/images/room-laptop.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(204, 204, 204);">
     </div>
@@ -77,7 +77,7 @@
                             <h3 class="mbr-section-title display-2">Após ter conhecido um pouco do App...</h3>
 
                             <div class="mbr-section-text">
-                                <p>Prossiga abaixo e entenda como baixar-lo e outras informações:<br>È muito importante acompanhar cada vídeo abaixo... Depois de acompahar todos os vídeos e baixar o App, o botão continuar esta lá embaixo.</p>
+                                <p>Prossiga abaixo e entenda como baixar-lo e outras informações:<br>É muito importante acompanhar cada vídeo, são 4 vídeos abaixo... Depois de acompahar todos os vídeos e baixar o App, o botão continuar para prosseguir esta lá embaixo.</p>
                             </div>
 
                             
