--- a/fase-1.html
+++ b/fase-1.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2r" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Site Maker</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2r" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -104,7 +104,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><blockquote>1 - PAGO - ROBS-2320 (<a href="http://construtor.gerasite.com/header/3c0eb29e1c2ab0b6cee152d0c913edfc.jpg" target="_blank">7,00 reais</a>) (<a href="http://construtor.gerasite.com/header/3c0eb29e1c2ab0b6cee152d0c913edfc.jpg" target="_blank">3,00 reais</a>)</blockquote><blockquote>2 &nbsp;- PAGO - HUMB-4555 (<a href="http://construtor.gerasite.com/header/3c0eb29e1c2ab0b6cee152d0c913edfc.jpg" target="_blank">7,00 reais</a>) (<a href="http://construtor.gerasite.com/header/3c0eb29e1c2ab0b6cee152d0c913edfc.jpg" target="_blank">3,00 reais</a>)</blockquote><blockquote>3	- DISPONÍVEL</blockquote><blockquote>4 - DISPONÍVEL</blockquote><blockquote>5 - DISPONÍVEL</blockquote></div>
+            <div class="col-xs-12 lead"><blockquote>1 - PAGO - ROBS-2320 (<a href="http://construtor.gerasite.com/header/3c0eb29e1c2ab0b6cee152d0c913edfc.jpg" target="_blank">7,00 reais</a>) + (<a href="http://construtor.gerasite.com/header/3c0eb29e1c2ab0b6cee152d0c913edfc.jpg" target="_blank">3,00 reais</a>)</blockquote><blockquote>2 &nbsp;- PAGO - HUMB-4555 (<a href="http://construtor.gerasite.com/header/3c0eb29e1c2ab0b6cee152d0c913edfc.jpg" target="_blank">7,00 reais</a>) + (<a href="http://construtor.gerasite.com/header/3c0eb29e1c2ab0b6cee152d0c913edfc.jpg" target="_blank">3,00 reais</a>)</blockquote><blockquote>3	- DISPONÍVEL</blockquote><blockquote>4 - DISPONÍVEL</blockquote><blockquote>5 - DISPONÍVEL</blockquote></div>
         </div>
     </div>
 
