--- a/fase-1.html
+++ b/fase-1.html
@@ -104,7 +104,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><blockquote>1 - PAGO - ROBS-2320 (R$CONTENT$nbsp;<a href="http://construtor.gerasite.com/header/3c0eb29e1c2ab0b6cee152d0c913edfc.jpg" target="_blank">7,00</a>) + (R$CONTENT$nbsp;<a href="http://construtor.gerasite.com/header/3c0eb29e1c2ab0b6cee152d0c913edfc.jpg" target="_blank">3,00</a>)</blockquote><blockquote>2 &nbsp;- PAGO - HUMB-4555 (R$CONTENT$nbsp;<a href="http://construtor.gerasite.com/header/3c0eb29e1c2ab0b6cee152d0c913edfc.jpg" target="_blank">7,00</a>) + (R$CONTENT$nbsp;<a href="http://construtor.gerasite.com/header/3c0eb29e1c2ab0b6cee152d0c913edfc.jpg" target="_blank">3,00</a>)</blockquote><blockquote>3	- DISPONÍVEL</blockquote><blockquote>4 - DISPONÍVEL</blockquote><blockquote>5 - DISPONÍVEL</blockquote></div>
+            <div class="col-xs-12 lead"><blockquote>1 - ROBS-2320 Comprovantes (<a href="http://construtor.gerasite.com/header/3c0eb29e1c2ab0b6cee152d0c913edfc.jpg" target="_blank">7,00</a>) + (<a href="http://construtor.gerasite.com/header/3c0eb29e1c2ab0b6cee152d0c913edfc.jpg" target="_blank">3,00</a>)</blockquote><blockquote>2 - HUMB-4555 Comprovantes (<a href="http://construtor.gerasite.com/header/3c0eb29e1c2ab0b6cee152d0c913edfc.jpg" target="_blank">7,00</a>) + (<a href="http://construtor.gerasite.com/header/3c0eb29e1c2ab0b6cee152d0c913edfc.jpg" target="_blank">3,00</a>)</blockquote><blockquote>3	- DISPONÍVEL</blockquote><blockquote>4 - DISPONÍVEL</blockquote><blockquote>5 - DISPONÍVEL</blockquote></div>
         </div>
     </div>
 
