--- a/confirme-seu-cadastro.html
+++ b/confirme-seu-cadastro.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1l" style="background-color: rgb(226, 80, 65); padding-top: 140px; padding-bottom: 60px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Maker</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1l" style="background-color: rgb(226, 80, 65); padding-top: 140px; padding-bottom: 60px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -97,5 +97,6 @@
   
   
   <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon"></i></a></div>
   </body>
 </html>
